--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-  <link href="/dist/output.css" rel="stylesheet">
+  <link href="output.css" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.google.com/specimen/Red+Hat+Display">
   
   <title>Frontend Mentor | Order summary card</title>
